# gsheets-demo

./: Cargo.toml  clientsecret.json.template
src/: main.rs
