[package]
name = "rust-gsheets-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-sheets4 = "*"
hyper = "^0.14"
hyper-rustls = "0.23.0"
serde = "^1.0"
serde_json = "^1.0"
yup-oauth2 = "6.6.0"
tokio = { version = "1.18.0", features = [
    "macros",
    "io-util",
    "rt",
    "rt-multi-thread",
    "fs"
] }
chrono = "0.4.19"


